--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     and
                     <span>programming</span>.
                     I'm also a
-                    professional <span>designer</span> with 3 years of experience, view some of my projects <button
-                        class="works">Projects <i class="fa-solid fa-arrow-left"
-                            style="transform: rotate(-90deg); color: gray;"></i></button>
+                    professional <span>designer</span> with 3 years of experience, view some of my projects <a
+                        href="#projects" class="works">Projects <i class="fa-solid fa-arrow-left"
+                            style="transform: rotate(-90deg); color: gray;"></i></a>
                 </p>
                 <div class="social">
                     <div class="youtube socialicon hoverMessage" hoverMSG="Open my Youtube channel"><a
@@ -94,8 +94,8 @@
                     <div class="discord hoverMessage socialicon " hoverMSG="Copy Discord username"><a href="/"><i
                                 class="fa-brands fa-discord"></i></a>
                     </div>
-                    <div class="github hoverMessage socialicon " hoverMSG="Github page"><a href="/"><i
-                                class="fa-brands fa-github"></i></a>
+                    <div class="github hoverMessage socialicon " hoverMSG="Github page"><a
+                            href="https://github.com/1RqMi-Official"><i class="fa-brands fa-github"></i></a>
                     </div>
                     <div class="insta socialicon hoverMessage" hoverMSG="Open my Instagram page"><a
                             href="https://www.instagram.com/rvmw_/"><i class="fa-brands fa-instagram"></i></a>
@@ -105,8 +105,9 @@
             <div class="container">
                 <div class="square s2">
                     <img src="images/cyber.png" alt="">
-                    <button>See more <i class="fa-solid fa-arrow-left"
-                            style="transform: rotate(-90deg); color: gray;"></i></button>
+                    <a href="#projects"> See more <i class="fa-solid fa-arrow-left"
+                            style="transform: rotate(-90deg); color: gray;"></i>
+                    </a>
                     <div class="title">Cyberpunk Lobby</div>
                 </div>
 
@@ -145,8 +146,8 @@
                 <div class="container-card">
                     <div class="scroller">
                         <div class="overflow">
-                            <div class="card">
-                                <img src="images/bedwar.png" alt="">
+                            <div class="card disabled">
+                                <img src="images/error.png" alt="">
                                 <div class="details">
                                     <div class="group">
                                         <div class="title">Paradise Studio</div>
@@ -160,8 +161,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <img src="images/bedwar.png" alt="">
+                            <div class="card disabled">
+                                <img src="images/error.png" alt="">
                                 <div class="details">
                                     <div class="group">
                                         <div class="title">Paradise Studio</div>
@@ -175,8 +176,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <img src="images/bedwar.png" alt="">
+                            <div class="card disabled">
+                                <img src="images/error.png" alt="">
                                 <div class="details">
                                     <div class="group">
                                         <div class="title">Paradise Studio</div>
@@ -220,9 +221,8 @@
                                 <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content">1RqMi did a nice map for me last week,
-                            it was impressive and good as fuck, fuck you.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
 
@@ -239,11 +239,8 @@
                                 <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content">1RqMi did a nice map for me last week,
-                            it was impressive and good as fuck, fuck you a lot of 200x200
-                            is nice and good very bad hahhaha, it was nicer but the kpk was good
-                            hahaha. thanks for 1RqMi.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
 
@@ -259,9 +256,8 @@
                                 <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content"> it was nicer but the kpk was good
-                            hahaha. thanks for 1RqMi.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
                     </div>
@@ -271,8 +267,8 @@
                                 4
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content">1RqMi did a nice map for me last.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
 
@@ -283,8 +279,8 @@
                                 5
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content">1RqMi did a nice map for me last.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
 
@@ -303,9 +299,8 @@
                                 <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content">1RqMi did a nice map for me last week,
-                            it was impressive and good as fuck, fuck you.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
 
@@ -325,11 +320,8 @@
                                 <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content">1RqMi did a nice map for me last week,
-                            it was impressive and good as fuck, fuck you a lot of 200x200
-                            is nice and good very bad hahhaha, it was nicer but the kpk was good
-                            hahaha. thanks for 1RqMi.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
 
@@ -346,9 +338,8 @@
                                 <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                             </div>
                         </div>
-                        <div class="title">The new pvp map</div>
-                        <div class="content"> it was nicer but the kpk was good
-                            hahaha. thanks for 1RqMi.
+                        <div class="title">Project Name</div>
+                        <div class="content">No feedback received yet. Be the first to provide your feedback! 📝
                         </div>
                         <div class="date">2024/19/7</div>
                     </div>
