--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 <li>
                     <div class="logo">
                         <img src="pfp.png" alt="">
+                        <div class="avaliable hoverMessage" hoverMSG="Currently not avaliable to work!"><span></span>
+                        </div>
                     </div>
                     <div class="bow"></div>
                     <div class="name hoverMessage" discord="1r_q."><span class="n-1">1Rqmi,</span><span
