--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <meta property="og:title" content="1RqMi | Home">
+    <meta property="og:description" content="You can find more information about me on this website..">
+    <meta property="og:image" content="images/website.png">
+    <meta property="og:image:width" content="1200"> <!-- Optional, but recommended -->
+    <meta property="og:image:height" content="630">
+
+    <meta property="og:url" content="https://1rqmi-official.github.io/1RqMi-Profile/">
+    <link rel="icon" href="pfp.png" type="image/x-icon">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Home page">
+
+
     <title>1RqMi | Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
