--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+    <meta name="description" content="You can find more information about me on this website..">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="1RqMi | Home">
+    <meta itemprop="description" content="You can find more information about me on this website..">
+    <meta itemprop="image" content="images/website.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://1rqmi-official.github.io/1RqMi-Profile">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="1RqMi | Home">
     <meta property="og:description" content="You can find more information about me on this website..">
     <meta property="og:image" content="images/website.png">
-    <meta property="og:image:width" content="1920"> <!-- Optional, but recommended -->
-    <meta property="og:image:height" content="1080">
 
-    <meta property="og:url" content="https://1rqmi-official.github.io/1RqMi-Profile/">
-    <link rel="icon" href="pfp.png" type="image/x-icon">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Home page">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="1RqMi | Home">
+    <meta name="twitter:description" content="You can find more information about me on this website..">
+    <meta name="twitter:image" content="images/website.png">
+
+    <!-- Meta Tags Generated via http://heymeta.com -->
 
 
     <title>1RqMi | Home</title>
