--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <li>
                     <div class="logo">
                         <img src="pfp.png" alt="">
-                        <div class="avaliable hoverMessage" hoverMSG="Currently not avaliable to work!"><span></span>
+                        <div class="status offline hoverMessage" hoverMSG="Currently not avaliable to work!">
+                            <span></span>
                         </div>
                     </div>
                     <div class="bow"></div>
@@ -452,6 +453,7 @@
     </footer>
     <script src="style.js"></script>
     <script src="colorAvrg.js"></script>
+    <script src="loginstatus.js"></script>
 </body>
 
 </html>
