--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="section4.css">
     <link rel="stylesheet" href="section5.css">
     <link rel="stylesheet" href="scroll.css">
+    <link rel="stylesheet" href="loading.css">
 
 
 
@@ -58,6 +59,10 @@
 </head>
 
 <body>
+    <div class="loading"><span></span><span></span>
+        <div class="text">loading...</div>
+    </div>
+
     <div class="hidden"></div>
     <nav>
         <ul class="navigation">
@@ -66,7 +71,7 @@
                 <li>
                     <div class="logo">
                         <img src="pfp.png" alt="">
-                        <div class="status offline hoverMessage" hoverMSG="Currently not avaliable to work!">
+                        <div class="status offline hoverMessage" hoverMSG="...loading">
                             <span></span>
                         </div>
                     </div>
@@ -91,7 +96,7 @@
     </nav>
     <div class="land" id="profile">
         <div class="space"></div>
-        <section>
+        <section class="one">
             <div class="landing">
                 <h1 class="welcome">Welcome to my page.</h1>
 
@@ -451,6 +456,7 @@
             </div>
         </div>
     </footer>
+    <script src="loading.js"></script>
     <script src="style.js"></script>
     <script src="colorAvrg.js"></script>
     <script src="loginstatus.js"></script>
