--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 
 
     <!-- Meta Tags Generated via http://heymeta.com -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QKGH85JPVJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-QKGH85JPVJ');
+</script>
 
     <title>1RqMi | Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
