--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   gtag('config', 'G-QKGH85JPVJ');
 </script>
-
+<script src="https://cdn.counter.dev/script.js" data-id="4422b949-2e5a-48be-90a4-25c70011f387" data-utcoffset="3"></script>
     <title>1RqMi | Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
